--- a/index.html
+++ b/index.html
@@ -5,9 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@100&family=Maven+Pro&family=PT+Sans&family=Roboto+Condensed&family=Roboto+Mono&family=Roboto+Slab&family=Roboto:wght@700&family=Urbanist&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <title>Document</title>
 </head>
 <body>
+
+    <div class="container">
+        <div class="nav">
+            <div class="nissanLogo">
+                <img src="img/nissanlogo.png" alt="">
+            </div>
+            <div class="headerText">
+                <h3>PRE-ORDER</h3>
+                <h3>GT-R HISTORY</h3>
+                <h3>FIND A DEALER</h3>
+                <h3>GALLERY</h3>
+            </div>
+            <div class="accountSearch">
+                <h4>MY ACCOUNT</h4>
+                <i class="fas fa-search"></i>
+            </div>
+        </div>
+    </div>
     
 
 
