Styling first section/nav

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@100&family=Maven+Pro&family=PT+Sans&family=Roboto+Condensed&family=Roboto+Mono&family=Roboto+Slab&family=Roboto:wght@700&family=Urbanist&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@100&family=Maven+Pro&family=PT+Sans&family=Roboto+Condensed:wght@300;400&family=Roboto+Mono&family=Roboto+Slab&family=Roboto:wght@100;700&family=Urbanist&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <title>Document</title>
 </head>
 <body>
 
-    <div class="container">
+<div class="container">
+    <header>
         <div class="nav">
             <div class="nissanLogo">
                 <img src="img/nissanlogo.png" alt="">
@@ -23,11 +24,22 @@
                 <h3>GALLERY</h3>
             </div>
             <div class="accountSearch">
-                <h4>MY ACCOUNT</h4>
+                <div class="accountFlex">
+                    <i class="far fa-user"></i>
+                    <h4>MY ACCOUNT</h4>
+                </div>
                 <i class="fas fa-search"></i>
             </div>
         </div>
-    </div>
+        
+        <div class="allNew">
+            <h2>
+                <span class="lighter">THE ALL NEW</span>
+                <span class="bolder">GT-R R35</span>
+            </h2>
+        </div>
+    </header>
+</div>
     
 
 
