Added and styling specs section

--- a/index.html
+++ b/index.html
@@ -37,8 +37,26 @@
                 <span class="lighter">THE ALL NEW</span>
                 <span class="bolder">GT-R R35</span>
             </h2>
+            <h3>
+                <span class="lighter">A DIFFERENT TYPE OF</span>
+                <span class="bolder">SUPERCAR.</span>
+            </h3>
         </div>
     </header>
+
+    <div class="specsSection">
+        <div class="specsPic">
+            <img src="img/gtrTrack.jpg" alt="">
+            <h2>UNLEASH POWER AT THE TRACK.</h2>
+            <h4>Erase the competition with Track mode and </h4>
+        </div>
+        <div class="specsPic">
+            <img src="img/engine.jpg" alt="">
+            <h2>ENGINEERED FOR SPEED.</h2>
+            <h4>Destroy the competition with our newly designed 3.8L Twin Turbo V6 Engine.</h4>
+        </div>
+    </div>
+
 </div>
     
 
