Added carchanger section

--- a/index.html
+++ b/index.html
@@ -48,13 +48,24 @@
         <div class="specsPic">
             <img src="img/gtrTrack.jpg" alt="">
             <h2>UNLEASH POWER AT THE TRACK.</h2>
-            <h4>Erase the competition with Track mode and </h4>
+            <h4>Erase the competition and reach new limits with our remodeled Track Mode.</h4>
         </div>
         <div class="specsPic">
             <img src="img/engine.jpg" alt="">
             <h2>ENGINEERED FOR SPEED.</h2>
             <h4>Destroy the competition with our newly designed 3.8L Twin Turbo V6 Engine.</h4>
         </div>
+    </div>
+
+    <div class="carChanger">
+        <div class="carTitle">
+            <h2>2021 GT-R</h2>
+            <h4>* FROM $113,540 *</h4>
+        </div>
+        <div class="carChoices">
+            <img src="img/gtr2.png" alt="">
+        </div>
+        
     </div>
 
 </div>
