Added gtr video

--- a/index.html
+++ b/index.html
@@ -57,6 +57,14 @@
         </div>
     </div>
 
+    <div class="vidSection">
+        <div class="gtrVid">
+            <video id="background-video" autoplay loop muted poster="img/Pexels Videos 1851190.mp4">
+                <source src="img/gtrvid.mp4" type="video/mp4">
+              </video>
+        </div>
+    </div>
+
     <div class="carChanger">
         <div class="carTitle">
             <h2>2021 GT-R</h2>
