--- a/index.html
+++ b/index.html
@@ -49,11 +49,13 @@
             <img src="img/gtrTrack.jpg" alt="">
             <h2>UNLEASH POWER AT THE TRACK.</h2>
             <h4>Erase the competition and reach new limits with our remodeled Track Mode.</h4>
+            <button class="btnLearn">LEARN MORE</button>
         </div>
         <div class="specsPic">
             <img src="img/engine.jpg" alt="">
             <h2>ENGINEERED FOR SPEED.</h2>
             <h4>Destroy the competition with our newly designed 3.8L Twin Turbo V6 Engine.</h4>
+            <button class="btnLearn">LEARN MORE</button>
         </div>
     </div>
 
@@ -62,6 +64,10 @@
             <video id="background-video" autoplay loop muted poster="img/Pexels Videos 1851190.mp4">
                 <source src="img/gtrvid.mp4" type="video/mp4">
               </video>
+        </div>
+        <div class="infoBtn">
+            <button class="btnLearn">PRE-ORDER TODAY</button>
+            <button class="btnLearn">WATCH FULL VIDEO</button>
         </div>
     </div>
 
