Adding new section

--- a/index.html
+++ b/index.html
@@ -77,7 +77,13 @@
         <div class="carChoices">
             <img src="img/gtr2.png" alt="">
         </div>
-        
+    </div>
+
+    <div class="gtrHistory">
+        <div class="imgText">
+            <img src="img/newfirstgtr.jpg" alt="">
+            <h2>The Nissan R35 GTR made its debut at the 2007 Tokyo Motor Show, and its launch to the Japanese market was the 6th December 2007. It was launched to the U.S.A July 07, 2008. The Nissan R35 has its engine and rear-mounted dual-clutch gearbox built by hand, limiting production to around 1000 cars a month.</h2>
+        </div>
     </div>
 
 </div>
