--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@100&family=Maven+Pro&family=PT+Sans&family=Roboto+Condensed:wght@300;400&family=Roboto+Mono&family=Roboto+Slab&family=Roboto:wght@100;700&family=Urbanist&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <script src="https://kit.fontawesome.com/d422196571.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
@@ -83,6 +84,7 @@
         <div class="imgText">
             <img src="img/newfirstgtr.jpg" alt="">
             <h2>The Nissan R35 GTR made its debut at the 2007 Tokyo Motor Show, and its launch to the Japanese market was the 6th December 2007. It was launched to the U.S.A July 07, 2008. The Nissan R35 has its engine and rear-mounted dual-clutch gearbox built by hand, limiting production to around 1000 cars a month.</h2>
+            <i class="fa-solid fa-engine"></i>
         </div>
     </div>
 
