bg color issues

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <button class="btnLearn">LEARN MORE</button>
         </div>
         <div class="specsPic">
-            <img src="img/engine.jpg" alt="">
+            <img src="img/gtrEngine.jpg" alt="">
             <h2>ENGINEERED FOR SPEED.</h2>
             <h4>Destroy the competition with our newly designed 3.8L Twin Turbo V6 Engine.</h4>
             <button class="btnLearn">LEARN MORE</button>
@@ -70,23 +70,7 @@
         </div>
     </div>
 
-    <div class="carChanger">
-        <div class="carTitle">
-            <h2>2021 GT-R</h2>
-            <h4>* FROM $113,540 *</h4>
-        </div>
-        <div class="carChoices">
-            <img src="img/gtr2.png" alt="">
-        </div>
-    </div>
 
-    <div class="gtrHistory">
-        <div class="imgText">
-            <img src="img/newfirstgtr.jpg" alt="">
-            <h2>The Nissan R35 GTR made its debut at the 2007 Tokyo Motor Show, and its launch to the Japanese market was the 6th December 2007. It was launched to the U.S.A July 07, 2008. The Nissan R35 has its engine and rear-mounted dual-clutch gearbox built by hand, limiting production to around 1000 cars a month.</h2>
-            <i class="fa-solid fa-engine"></i>
-        </div>
-    </div>
 
 </div>
     
