--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
         </div>
     </header>
 
+    <div class="lineSplit">
+        <div class="linePic">
+            <hr>
+            <img src="img/nissanlogo.png" alt="">
+            <hr>
+        </div>
+    </div>
+
     <div class="specsSection">
         <div class="specsPic">
             <img src="img/gtrTrack.jpg" alt="">
