--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="lineSplit">
         <div class="linePic">
             <hr>
-            <img src="img/nissanlogo.png" alt="">
+            <img src="img/gtrlogo2.png" alt="">
             <hr>
         </div>
     </div>
