--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
         </div>
     </div>
 
+    <div class="viewInventory">
+        <div class="viewText">
+            <h2>View inventory near your area.</h2>
+            <input type="text" placeholder="Enter ZIP Code or City, State">
+        </div>
+    </div>
+
     <div class="specsSection">
         <div class="specsPic">
             <img src="img/gtrTrack.jpg" alt="">
