new images and historySection

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
         
         <div class="allNew">
             <h2>
-                <span class="lighter">THE ALL NEW</span>
+                <span class="bolder">THE ALL NEW 2022</span>
                 <span class="bolder">GT-R R35</span>
             </h2>
             <h3>
-                <span class="lighter">A DIFFERENT TYPE OF</span>
+                <span class="bolder">A DIFFERENT TYPE OF</span>
                 <span class="bolder">SUPERCAR.</span>
             </h3>
         </div>
@@ -56,7 +56,10 @@
     <div class="viewInventory">
         <div class="viewText">
             <h2>View inventory near your area.</h2>
-            <input type="text" placeholder="Enter ZIP Code or City, State">
+            <div class="btnFlex">
+                <input class="inputBox" type="text" placeholder="Enter ZIP Code or City">
+                <button class="btnSubmit">Submit</button>
+            </div>
         </div>
     </div>
 
@@ -75,7 +78,7 @@
         </div>
     </div>
 
-    <div class="vidSection">
+    <!-- <div class="vidSection">
         <div class="gtrVid">
             <video id="background-video" autoplay loop muted poster="img/Pexels Videos 1851190.mp4">
                 <source src="img/gtrvid.mp4" type="video/mp4">
@@ -83,8 +86,13 @@
         </div>
         <div class="infoBtn">
         </div>
-    </div>
+    </div> -->
 
+    <div class="historySection">
+        <div class="historyFlex">
+            <h3>Zero To Thrill In Under 3 Seconds.</h3>
+        </div>
+    </div>
 
 
 </div>
