--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
 
     <div class="historySection">
         <div class="historyFlex">
-            <h3>Zero To Thrill In Under 3 Seconds.</h3>
+            <h3>ZERO TO THRILL IN UNDER 3 SECONDS.</h3>
+            <h5>EXPLORE PERFORMANCE</h5>
         </div>
     </div>
 
